--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* STUDENTS: Take note of the differences 
-   in the file directories of PreDeploy and ReadyToDeploy. */
 /* 
 
 Each of these CSS elements is associated with an HTML Element, Class, or ID.
@@ -23,34 +21,146 @@ body {
   color: #333333;
 
   /* Visual */
-  background: #efeee7;
+  /*background: #efeee7;*/
 
+}
+
+#button {
+    background-color: #4aaaa5;
+    width: 100px;
+    /* margin: 5px; */
+    padding: 3px;
+    /* padding-bottom: 3px; */
+    /* padding-top: 3px; */
+    text-align: center;
+    color: white;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
+}
+
+#colored-box  {
+    background-color: #4aaaa5;
+    width: 200px;
+    position: absolute;
+}
+
+#box img {
+  float: left;
+  margin: 22px;
+}
+
+#box h2 {
+  color: #4aaaa5;
+}
+
+#box p {
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color: #777777;
+  line-height: 31px;
+}
+
+#box{
+  background-color: white;
+  width: 650px;
+  height: 550px;
+  float: left;
+  padding: 20px;
+
+}
+
+
+#box input {
+  width: 100%;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
+}
+
+#aside {
+  background-color: white;
+  width: 270px;
+  height: 250px;
+  padding: 10px;
+  float: left;
+  margin-left: 50px;
+  text-align: center;
+
+}
+
+#aside h3{
+  color: #4aaaa5;
+}
+
+#aside img {
+    width: 56px;
+    height: 56px;
+    margin: 10px;
+}
+
+
+#content  {
+  /*background-color: red;*/
+  /*height: 300px;*/
+  width: 1220px;
+  margin-left: 156px;
+  padding-top: 50px;
+}
+
+#main {
+  height: 550px;
+  background-image: url(cork-wallet.png);
+
+
+}
+
+#footer {
+
+    background-color: #666666;
+    text-align: center;
+    color: white;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 12px;
+    padding: 35px;
+}
+
+#links {
+    float: right;
+    width: 300px;
+    height: 83px;
+    margin-right: 200px;
+    margin-top: 40px;
+
+    /*background-color: red;*/
+
+}
+
+#links a{
+    text-decoration: none;
+    color: #666666;
+    padding: 11px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 header { 
-
-  background: #d21034; 
-  width: 20%;
-  margin-left: 100px;
-  margin-top: 50px;
+  height: 84px;
+  background-color: white;
 }
 
 h1 {
-  
-  /* Positioning */
-  margin-bottom: 20px;
-  margin: 0;
 
-  /* Box-model */
-  padding: 20px 0;
+    margin-left: 156px;
+    float: left;
+    /* margin-bottom: 20px; */
+    /* margin: 0; */
+    padding: 29px;
+    color: white;
+    font-size: 28px;
+    text-align: center;
+    background: #4aaaa5;
+    margin-top: 0;
 
-  /* Typography */
-  color: #eee;
-  font-size: 28px;
-  text-align: center;
-  
-  /* Visual */
-  background: #4aaaa5;
   
 }
 
@@ -65,6 +175,8 @@ a { color: #d21034; }
 
   /* Box-model */
   width: 1024px;
+
+  display: inherit;
   
 }
 
@@ -80,9 +192,9 @@ a { color: #d21034; }
 
 #contact-info { 
   width: 30%; 
-  background-color: orange;
+  /*background-color: orange;*/
   position: inherit;
-
+  float: left;
 }
 
 #bio-image {
