--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ body {
 
 #main {
   height: 550px;
-  background-image: url(cork-wallet.png);
+  background-image: url(images/cork-wallet.png);
 
 
 }
