--- a/style.css
+++ b/style.css
@@ -1,20 +1,6 @@
-/* 
-
-Each of these CSS elements is associated with an HTML Element, Class, or ID.
-Flip between this CSS file and the HTML to see how things line up. 
-Experiment with deleting lines of code from the CSS to see how it affects the web page when you refresh in the browser.
-
-*/
-
 body {
-  
-  /* Positioning */
   margin: 0;
-
-  /* Box-model */
   padding: 0;
-
-  /* Typography */
   font-size: 18px;
   line-height: 150%;
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -27,7 +13,6 @@ body {
     height: 500px;
     float: left;
     padding: 10px;
-
 }
 
 #button {
@@ -65,14 +50,12 @@ body {
 
 }
 
-
 #box input {
   width: 100%;
   padding-top: 5px;
   padding-right: 5px;
   padding-bottom: 5px;
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-
 }
 
 #aside {
@@ -83,7 +66,6 @@ body {
   float: left;
   margin-left: 50px;
   text-align: center;
-
 }
 
 #aside h3{
@@ -96,10 +78,7 @@ body {
     margin: 10px;
 }
 
-
 #content  {
-  /*background-color: red;*/
-  /*height: 300px;*/
   width: 1220px;
   margin-left: 156px;
   padding-top: 50px;
@@ -108,12 +87,9 @@ body {
 #main {
   height: 550px;
   background-image: url(images/cork-wallet.png);
-
-
 }
 
 #footer {
-
     background-color: #666666;
     text-align: center;
     color: white;
@@ -128,9 +104,6 @@ body {
     height: 83px;
     margin-right: 200px;
     margin-top: 40px;
-
-    /*background-color: red;*/
-
 }
 
 #links a{
@@ -143,56 +116,20 @@ body {
 header { 
   height: 84px;
   background-color: white;
+  position: static;
 }
 
 h1 {
-
     margin-left: 156px;
     float: left;
-    /* margin-bottom: 20px; */
-    /* margin: 0; */
     padding: 29px;
     color: white;
     font-size: 28px;
     text-align: center;
     background: #4aaaa5;
     margin-top: 0;
-
-  
 }
 
 h2 { font-size: 24px; }
 
 a { color: #d21034; }
-
-.container {
-
-  /* Positioning */
-  margin: 0 auto;
-
-  /* Box-model */
-  width: 1024px;
-
-  display: inherit;
-  
-}
-
-#main-bio { width: 70%; }
-
-#contact-info { 
-  width: 30%; 
-  /*background-color: orange;*/
-  position: inherit;
-  float: left;
-}
-
-#bio-image {
-
-  /* Positioning */
-  margin-right: 20px;
-
-   /* Box-model */
-  width: 200px;
-  height: 200px;
-  
-}
